--- a/results.html
+++ b/results.html
@@ -36,7 +36,7 @@
         <div class="validation">
             <h1>Validation</h1>
             <p>
-                <img src="" alt="">
+                <img src="images/validation.png" alt="Validation" />
             </p>
         </div>
         <div class="lighthouse">
@@ -48,7 +48,7 @@
         <div class="contrast">
             <h1>Contrast</h1>
             <p>
-                <img src="" alt="">
+                <img src="images/contrast.png" alt="Contrast" />
             </p>
         </div>
     </main>
