--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <div class="header">
             <div class="logo">
                 <img src="https://placehold.co/200x64/858585/f7f1eb?text=Site+Logo" srcset="https://placehold.co/200x64/858585/f7f1eb?text=Site+Logo 200w,
-            https://placehold.co/400x128/858585/f7f1eb?text=Site+Logo 400w,
-            https://placehold.co/800x256/858585/f7f1eb?text=Site+Logo 800w" sizes="(max-width: 600px) 200px,
-           (max-width: 1000px) 400px,
-           800px" alt="Site Logo">
+                            https://placehold.co/400x128/858585/f7f1eb?text=Site+Logo 400w,
+                            https://placehold.co/800x256/858585/f7f1eb?text=Site+Logo 800w" sizes="(max-width: 600px) 200px,
+                            (max-width: 1000px) 400px, 800px" alt="Site Logo">
             </div>
             <nav>
                 <ul class="menu">
@@ -34,8 +33,10 @@
             <section id="home" class="home">
                 <div class="home-content">
                     <h1>Company X</h1>
-                    <img class="home-image" src="https://placehold.co/1024x200/333333/f7f1eb?text=Home+Image"
-                        alt="Company Image">
+                    <img class="home-image" src="https://placehold.co/1024x200/333333/f7f1eb?text=Home+Image" srcset="https://placehold.co/1024x200/333333/f7f1eb?text=Home+Image 1024w,
+                                https://placehold.co/2048x400/333333/f7f1eb?text=Home+Image 2048w,
+                                https://placehold.co/4096x800/333333/f7f1eb?text=Home+Image 4096w" sizes="(max-width: 600px) 1024px,
+                                (max-width: 1000px) 2048px, 4096px" alt="Company Image">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore atque iure
                         perferendis, ut quidem , voluptatibus aperiam repudiandae aspernatur,
@@ -52,7 +53,10 @@
                 <div class="products-content">
                     <h1 class="title">Products</h1>
                     <img class="products-image" src="https://placehold.co/1024x200/333333/f7f1eb?text=Products+Image"
-                        alt="Company Image">
+                        srcset="https://placehold.co/1024x200/333333/f7f1eb?text=Products+Image 1024w,
+                                https://placehold.co/2048x400/333333/f7f1eb?text=Products+Image 2048w,
+                                https://placehold.co/4096x800/333333/f7f1eb?text=Products+Image 4096w" sizes="(max-width: 600px) 1024px,
+                                (max-width: 1000px) 2048px, 4096px" alt="Company Image">
                     <p class="products-text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates error ipsum autem officia
                         eveniet nostrum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore atque
@@ -72,7 +76,10 @@
                 <div class="products-list">
                     <div class="product">
                         <h2 class="product-name">Product 1</h2>
-                        <img src="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image" alt="Product 1">
+                        <img src="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image" srcset="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image 400w,
+                                    https://placehold.co/800x600/333333/f7f1eb?text=Product+Image 800w,
+                                    https://placehold.co/1600x1200/333333/f7f1eb?text=Product+Image 1600w" sizes="(max-width: 600px) 400px,
+                                    (max-width: 1000px) 800px, 1600px" alt="Product 1">
                         <h4 class="product-subtitle">Product 1 subtitle</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.Lorem ipsum
@@ -85,7 +92,10 @@
                     </div>
                     <div class="product">
                         <h2 class="product-name">Product 2</h2>
-                        <img src="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image" alt="Product 2">
+                        <img src="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image" srcset="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image 400w,
+                                    https://placehold.co/800x600/333333/f7f1eb?text=Product+Image 800w,
+                                    https://placehold.co/1600x1200/333333/f7f1eb?text=Product+Image 1600w" sizes="(max-width: 600px) 400px,
+                                    (max-width: 1000px) 800px, 1600px" alt="Product 2">
                         <h4 class="product-subtitle">Product 2 subtitle</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.Lorem ipsum
@@ -98,7 +108,10 @@
                     </div>
                     <div class="product">
                         <h2 class="product-name">Product 3</h2>
-                        <img src="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image" alt="Product 3">
+                        <img src="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image" srcset="https://placehold.co/400x300/333333/f7f1eb?text=Product+Image 400w,
+                                    https://placehold.co/800x600/333333/f7f1eb?text=Product+Image 800w,
+                                    https://placehold.co/1600x1200/333333/f7f1eb?text=Product+Image 1600w" sizes="(max-width: 600px) 400px,
+                                    (max-width: 1000px) 800px, 1600px" alt="Product 3">
                         <h4 class="product-subtitle">Product 3 subtitle</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.Lorem ipsum
@@ -133,7 +146,10 @@
                     </div>
                 </div>
                 <div class="contact-image">
-                    <img src="https://placehold.co/600x200/333333/f7f1eb?text=Map" alt="Contact Us">
+                    <img src="https://placehold.co/600x200/333333/f7f1eb?text=Map" srcset="https://placehold.co/600x200/333333/f7f1eb?text=Map 600w,
+                                https://placehold.co/1200x400/333333/f7f1eb?text=Map 1200w,
+                                https://placehold.co/2400x800/333333/f7f1eb?text=Map 2400w" sizes="(max-width: 600px) 600px,
+                                (max-width: 1000px) 1200px, 2400px" alt="Map">
                 </div>
             </section>
         </main>
