--- a/results.html
+++ b/results.html
@@ -42,7 +42,7 @@
         <div class="lighthouse">
             <h1>Lighthouse</h1>
             <p>
-                <img src="" alt="">
+                <img src="images/lighthouse.png" alt="Lighthouse" />
             </p>
         </div>
         <div class="contrast">
