--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <div>
                         Visit us at:<br>Company X
                         <address>
-                            Karaportti 2
-                            02340 ESPOO<br>
+                            Karaportti 2 <br>
+                            02340 ESPOO <br>
                             Finland
                         </address>
                         <div class="email">
