--- a/results.html
+++ b/results.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Results">
     <meta name="author" content="Nhi Dinh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 
 <body>
@@ -20,16 +19,12 @@
                     font-family: 'Roboto', sans-serif;
                     src: url('/fonts/Roboto-Regular.ttf') format('truetype');
                 }
-                
+
                 body {
                     font-family: 'Roboto', sans-serif;
                     margin: 0;
-                    padding: 0;
-                    background-image: url('/images/background.jpg');
-                    background-size: cover;
-                    background-repeat: no-repeat;
-                    background-attachment: fixed;
-                    background-position: center;
+                    padding: 0 10rem;
+                    background-color: #f7f1eb;
                 }
             </pre>
         </div>
